--- a/docs/css/hero.css
+++ b/docs/css/hero.css
@@ -1,10 +1,15 @@
 #hero-section {
+  box-sizing: border-box;
   margin-top: -30px;
   width: 100vw;
   position: absolute;
   left: 50%;
   margin-left: -50%;
   padding: calc(var(--unit-gutter)/2) var(--unit-gutter);
+}
+
+#hero-section .grid {
+  background-color: transparent;
 }
 
 .hero-claim {
